# xju-thesis-md2docx

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.sh  export-example.cmd  export-example.ps1  export-example.sh  md2docx.cmd  md2docx.ps1  md2docx.sh  pyproject.toml  xju.cmd  xju.ps1  xju.py  xju.sh  xju_thesis_md2docx.py  xju_thesis_md2docx_native.py
docs/: backends.md  profiles.md  usage.md
example/: README.md  thesis-demo.md
skill/: SKILL.md
skill/references/: pdf-backends.md
tests/: test_body_rules.py  test_parser_ir.py  test_profile_layout.py
thesis_md2docx/: body_rules.py  constants.py  doctor.py  exporter.py  frontmatter.py  ir.py  layout.py  main.py  markdown.py  media.py  parser.py
thesis_md2docx/builders/: document.py
thesis_md2docx/ooxml/: images.py  paragraphs.py  parts.py  render.py  tables.py
thesis_md2docx/profiles/: base.py  registry.py
thesis_md2docx/styles/: __init__.py  catalog.py
tools/docx2pdf/: README.md  docx2pdf.cmd  docx2pdf.ps1  docx2pdf.sh  env.example
tools/libreoffice-docx2pdf/: README.md  doctor.sh  docx2pdf.sh
tools/word-docx2pdf/: README.md  doctor.sh  docx2pdf.sh
xju_thesis_md2docx/: __init__.py  constants.py  exporter.py  inline.py  main.py  table_utils.py
xju_thesis_md2docx/builders/: document.py  elements.py
xju_thesis_md2docx/math/: converter.py
xju_thesis_md2docx/ooxml/: header_footer.py  render.py  tables.py  text.py  xml.py
xju_thesis_md2docx/pdf/: common.py  libreoffice.py  main.py  registry.py  word.py
xju_thesis_md2docx_native/: __init__.py  main.py
(+19 files in other folders)
